--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,7 @@ crashlytics-build.properties
 # Temporary auto-generated Android Assets
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
+.idea/.idea.HitStop/.idea/.gitignore
+.idea/.idea.HitStop/.idea/encodings.xml
+.idea/.idea.HitStop/.idea/indexLayout.xml
+.idea/.idea.HitStop/.idea/vcs.xml
