--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "Assets/Kultie"]
-	path = Assets/Kultie
-	url = https://github.com/kultie/CoreLibrary.git
+[submodule "Assets/CoreLibrary"]
+	path = Assets/CoreLibrary
+	url = https://github.com/kultie/CoreLibrary
